--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/dronsfield/commit-viewer#readme",
   "dependencies": {
+    "express": "^4.16.3",
     "gitlog": "^3.1.2",
     "lodash": "^4.17.5",
     "mkdirp": "^0.5.1",
-    "moment": "^2.22.0"
+    "moment": "^2.22.0",
+    "opn": "^5.3.0"
   }
 }
