--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.5",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.0",
-    "opn": "^5.3.0"
+    "opn": "^5.3.0",
+    "untildify": "^4.0.0"
   }
 }
